[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openusd_msfabric_toolkit"  # Changed from "openusd-msfabric-toolkit" to match import name
version = "0.1.0"
description = "A Python package to import, enrich, and contextualize OpenUSD data using Spark on Microsoft Fabric Notebooks"
authors = [
  { name="Vindhya Banda", email="vindhyabanda@microsoft.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "pyspark>=3.3",
    "thefuzz",
    "usd-core"
]

[project.urls]
Homepage = "https://github.com/vindhyabanda/openusd-msfabric-toolkit"